# xported-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
docs/: configuration.md  development.md  getting-started.md  installation.md  usage.md
docs/commands/: help.md  init.md  version.md
include/: Command.hpp  CommandRegistry.hpp
include/utils/: Execute.hpp  FindInit.hpp  ParseArgs.hpp
manuals/: xported-cli.1
src/: index.ts  main.cpp
src/classes/: Command.ts
src/comands/: Help.cpp  Init.cpp  Version.cpp
src/commands/: Help.cpp  Help.ts  Init.cpp  Init.ts  Version.cpp  Version.ts
src/commands/Hosting/: Http.ts
src/utils/: CommandRegistry.ts  FindInit.ts  MapDirectory.ts  ParseInit.ts  importHelper.ts
test/: CMakeLists.txt  CommandRegistryTest.cpp  CommandTest.cpp  mainTest.cpp
test/classes/: Command.test.ts
test/commands/: Help.test.ts  HelpTest.cpp  Init.test.ts  Version.test.ts  VersionTest.cpp
test/utils/: CommandRegsitry.test.ts  FindInit.test.ts
utils/: Execute.cpp  FindInit.cpp  ParseArgs.cpp
